--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script>
 // บังคับ reload ทันทีถ้าเวอร์ชันเก่า (ก่อนโหลดอย่างอื่น)
 (function(){
-  var CV='v14.1-cloud';
+  var CV='v14.2';
   var sv=localStorage.getItem('cream_ver');
   if(sv && sv!==CV){
     localStorage.setItem('cream_ver',CV);
@@ -286,7 +286,7 @@ body.boss-mode #stickySubmit button{max-width:600px}
 <div id="modalC"></div>
 
 <script>
-const APPS_SCRIPT_URL="https://script.google.com/macros/s/AKfycbwfyu8E61EF2X9oCoOe1xLscJ29-T8zubB8PAEhxOz2ZDLeggeeohOU7Qlb7Yw7M35N/exec";
+const APPS_SCRIPT_URL="https://script.google.com/macros/s/AKfycbz-ffCk5cGIfHr7BCeBMJM9svCIenidFVMcIYz6AKkSJPDxQdXrqAswlr97DtnkLB37/exec";
 
 const DEFAULT_USERS=[
   {email:"boss@hotmail.com",pin:"0000",name:"หัวหน้า",role:"boss",team:"ทั้งหมด"},
@@ -982,7 +982,7 @@ function hideSuc(){document.getElementById('sucOv').style.display='none'}
 
 document.addEventListener('DOMContentLoaded',()=>{
   // === Auto-Update System ===
-  const APP_VER='v14.1-cloud';
+  const APP_VER='v14.2';
   window._APP_VER=APP_VER;
   // อัปเดตเวอร์ชัน (ไม่ลบข้อมูลสินค้า)
   if(localStorage.getItem('cream_ver')!==APP_VER){localStorage.removeItem('cream_orders');localStorage.setItem('cream_ver',APP_VER);console.log('Updated to '+APP_VER+' - cleared old orders')}
